# BoyFucker

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
migrations/: 0001_create_allowlist.sql  0002_create_proxy_routes.sql
src/: access.rs  config.rs  error.rs  main.rs
src/commands/: mod.rs  moderation.rs  poll.rs  proxy.rs  voice.rs
src/events/: mod.rs
src/proxy/: mod.rs  routes.rs  sanitize.rs  transform.rs  username.rs  webhook.rs
